--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,11 +1,17 @@
-@media (max-width: 669px){
+@media (max-width: 1024px){
     body{
         width: 100%;
-        height: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
     }
 
     html{
         background-color: #294E28;
+    }
+
+    main{
+        flex: 1;
     }
 
     header{
@@ -14,13 +20,13 @@
 
     .book-list{
         display: grid;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
 
     dialog{
         left: 10%;
         top: 20%;
-        height: 64%;
+        height: 50%;
         width: 80vw;
         transform: translateY(-0.1px);
         margin-right: 10px;
